--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
     <body>
         <header id="header">
             <h2>F/GO Item Locator</h2>
+            <h3>Find the ascension item you need.</h3>
         </header>
         <main>
             <div id="search-bar">
-                <input type="search" id="search" placeholder="Enter item name">
+                <input type="search" id="search" placeholder="Search an Item">
             </div>
 
             <div id="item-area">
-                <div id="dragon-fang" class="item">
+                <div id="proof-hero" class="item">
                     <div class="item-box">
-                        <img class="item-icon" src="images/item-images/dragon-fang.png">
-                        <h1>Dragon Fang</h1>
+                        <img class="item-icon" src="images/item-images/proof-hero.png">
+                        <h1>Proof of Hero</h1>
                     </div>
                     <div class="location-box">
-                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Babylonia#Eridu" target="_blank">Eridu</a></p>
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_E_Pluribus_Unum#Dallas" target="_blank">Dallas</a></p>
                     </div>
                 </div>
                 <div id="evil-bone" class="item">
@@ -41,13 +42,13 @@
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Fuyuki#Unknown_Coordinates_X-G" target="_blank">Unknown Coordinates X-G</a></p>
                     </div>
                 </div>
-                <div id="proof-hero" class="item">
+                <div id="dragon-fang" class="item">
                     <div class="item-box">
-                        <img class="item-icon" src="images/item-images/proof-hero.png">
-                        <h1>Proof of Hero</h1>
+                        <img class="item-icon" src="images/item-images/dragon-fang.png">
+                        <h1>Dragon Fang</h1>
                     </div>
                     <div class="location-box">
-                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_E_Pluribus_Unum#Dallas" target="_blank">Dallas</a></p>
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Babylonia#Eridu" target="_blank">Eridu</a></p>
                     </div>
                 </div>
                 <div id="void-dust" class="item">
@@ -59,6 +60,33 @@
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_E_Pluribus_Unum#Charlotte" target="_blank">Charlotte</a></p>
                     </div>
                 </div>
+                <div id="fool-chain" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/fool-chain.png">
+                        <h1>Fool's Chain</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Camelot#Wilderness_of_Death" target="_blank">Wastelands of Death</a></p>
+                    </div>
+                </div>
+                <div id="deadly-poison-needle" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/deadly-poison-needle.png">
+                        <h1>Deadly Poisonous Needle</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Babylonia#Phragmites_Prairie" target="_blank">Field of Reeds</a></p>
+                    </div>
+                </div>
+                <div id="mystic-spinal-fluid" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/mystic-spinal-fluid.png">
+                        <h1>Mystic Spinal Fluid</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shinjuku#Shinjuku_Station" target="_blank">Shinjuku Station</a></p>
+                    </div>
+                </div>
                 <div id="stake-wailing-night" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/stake-wailing-night.png">
@@ -66,6 +94,15 @@
                     </div>
                     <div class="location-box">
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Salem#Gallows_Hill" target="_blank">Gallows Hill</a></p>
+                    </div>
+                </div>
+                <div id="mystic-gunpowder" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/mystic-gunpowder.png">
+                        <h1>Mystic Gunpowder</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Anastasia#Yaga_Smolensk" target="_blank">Yaga Smolensk</a></p>
                     </div>
                 </div>
                 <div id="seed-yggdrasil" class="item">
@@ -140,6 +177,15 @@
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Salem#Whateley_Residence" target="_blank">Whateley Residence</a></p>
                     </div>
                 </div>
+                <div id="meteor-horseshoe" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/meteor-horseshoe.png">
+                        <h1>Meteor Horseshoe</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Camelot#Vast_Land_of_Nothingness" target="_blank">Land of the Void</a></p>
+                    </div>
+                </div>
                 <div id="great-knight-medal" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/great-knight-medal.png">
@@ -158,13 +204,31 @@
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Babylonia#Observatory" target="_blank">Observatory</a></p>
                     </div>
                 </div>
+                <div id="refined-magatama" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/refined-magatama.png">
+                        <h1>Refined Magatama</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shimosa#Castle_Town" target="_blank">Castle Town</a></p>
+                    </div>
+                </div>
+                <div id="eternal-ice" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/eternal-ice.png">
+                        <h1>Eternal Ice</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Anastasia#Yaga_Moscow" target="_blank">Yaga Moscow</a></p>
+                    </div>
+                </div>
                 <div id="giant-ring" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/giant-ring.png">
                         <h1>Giant's Ring</h1>
                     </div>
                     <div class="location-box">
-                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_G%C3%B6tterd%C3%A4mmerung#Ablazed_Mansion" target="_blank">Flaming Mansion</a></p>
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_G%C3%B6tterd%C3%A4mmerung#Giants.27_Flower_Patio" target="_blank">Giant's Flower Garden</a></p>
                     </div>
                 </div>
                 <div id="aurora-steel" class="item">
@@ -185,6 +249,15 @@
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_S_I_N#Eight_Gates_Cave" target="_blank">Ba Men Cave</a></p>
                     </div>
                 </div>
+                <div id="arrowhead-malice" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/arrowhead-malice.png">
+                        <h1>Arrowhead of Malice</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Yuga_Kshetra#God's_Skyboulder_Ruins" target="_blank">God's Skyboulder Ruins</a></p>
+                    </div>
+                </div>
                 <div id="crown-silvery-light" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/crown-silvery-light.png">
@@ -203,6 +276,24 @@
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Olympus#Underground_Organization_Region:_Outer_Circumference" target="_blank">Underground Structure</a></p>
                     </div>
                 </div>
+                <div id="claw-chaos" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/claw-chaos.png">
+                        <h1>Claw of Chaos</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Atlantis#Hecate_Island" target="_blank">Hecate Island</a></p>
+                    </div>
+                </div>
+                <div id="heart-foreign-god" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/heart-foreign-god.png">
+                        <h1>Heard of the Foreign God</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shinjuku#Shinjuku_Imperial_Garden" target="_blank">Shinjuku Gyoen</a></p>
+                    </div>
+                </div>
                 <div id="dragon-reverse-scale" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/dragon-reverse-scale.png">
@@ -218,7 +309,7 @@
                         <h1>Spirit Root</h1>
                     </div>
                     <div class="location-box">
-                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_G%C3%B6tterd%C3%A4mmerung#Forgotten_Temple" target="_blank">Forgotten Shrine</a></p>
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shinjuku#Tower.27s_Top_Floor" target="_blank">Tower - Top Floor</a></p>
                     </div>
                 </div>
                 <div id="warhorse-young-horn" class="item">
@@ -242,10 +333,10 @@
                 <div id="black-beast-grease" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/black-beast-grease.png">
-                        <h1>Black Tallow</h1>
+                        <h1>Black Beast Grease</h1>
                     </div>
                     <div class="location-box">
-                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_E_Pluribus_Unum#Lubbock" target="_blank">Lubbock</a></p>
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Yuga_Kshetra#Secluded_Cave" target="_blank">Secluded Cave</a></p>
                     </div>
                 </div>
                 <div id="lamp-evil-sealing" class="item">
@@ -254,7 +345,7 @@
                         <h1>Lamp of Evil-Sealing</h1>
                     </div>
                     <div class="location-box">
-                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Salem#Jail" target="_blank">Jail</a></p>
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Yuga_Kshetra#Eastern_Puspavatika" target="_blank">Eastern Flower Garden</a></p>
                     </div>
                 </div>
                 <div id="scarab-wisdom" class="item">
@@ -282,6 +373,42 @@
                     </div>
                     <div class="location-box">
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Babylonia#Blood_Fort_Andromeda" target="_blank">Blood Fort</a></p>
+                    </div>
+                </div>
+                <div id="cursed-beast-gallstone" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/cursed-beast-gallstone.png">
+                        <h1>Cursed Beast Gallstone</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shimosa#Arakawa_Field" target="_blank">Arakawa Field</a></p>
+                    </div>
+                </div>
+                <div id="mysterious-divine-wine" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/mysterious-divine-wine.png">
+                        <h1>Mysterious Divine Wine</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Agartha#Dragon_Palace" target="_blank">Palace of Dragon King</a></p>
+                    </div>
+                </div>
+                <div id="reactor-core-dawn" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/reactor-core-dawn.png">
+                        <h1>Reactor Core of Dawn</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Olympus#Interstellar_City:_West" target="_blank">West Interstallar City</a></p>
+                    </div>
+                </div>
+                <div id="tsukumo-mirror" class="item">
+                    <div class="item-box">
+                        <img class="item-icon" src="images/item-images/tsukumo-mirror.png">
+                        <h1>Tsukumo Mirror</h1>
+                    </div>
+                    <div class="location-box">
+                        <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shimosa#Trembling_in_Fear" target="_blank">Rear Mountain</a></p>
                     </div>
                 </div>
                 <div id="egg-truth" class="item">
