--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div id="deadly-poison-needle" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/deadly-poison-needle.png">
-                        <h1>Deadly Poisonous Needle</h1>
+                        <h1>Deadly Poison Needle</h1>
                     </div>
                     <div class="location-box">
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Babylonia#Phragmites_Prairie" target="_blank">Field of Reeds</a></p>
@@ -289,7 +289,7 @@
                 <div id="heart-foreign-god" class="item">
                     <div class="item-box">
                         <img class="item-icon" src="images/item-images/heart-foreign-god.png">
-                        <h1>Heard of the Foreign God</h1>
+                        <h1>Heart of a Foreign God</h1>
                     </div>
                     <div class="location-box">
                         <p><a href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shinjuku#Shinjuku_Imperial_Garden" target="_blank">Shinjuku Gyoen</a></p>
