--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="styles\index.css">
         <link rel="icon" href="images\page-images\favicon.png">
-        <title>FGO Stuff</title>
+        <title>F/GO Item Locator</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
@@ -595,7 +595,7 @@
                 <p class="text-el">&copy; 2022 Zelp.</p>
             </div>
         </footer>
-        <script src="index.js"></script>
+        <script src="\scripts\index.js"></script>
     </body>
 
 </html>
