Made filter on items.html usable
-Made filter on items.html usable (added items.js)
-Added jQuery v. 3.6.4 minimal
-Added more items
-Changed many divs in items.html to be more semantic
-Fixed dark mode for footer in index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles\index.css">
-        <link rel="icon" href="images\page-images\favicon.png">
+        <link rel="stylesheet" href="styles/index.css">
+        <link rel="icon" href="images/page-images/favicon.png">
         <title>F/GO Item Locator</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -401,7 +401,7 @@
                         <h1 class="text-el">Tearstone of Blood</h1>
                     </div>
                     <div class="location-box">
-                        <img class="item-icon" src="images/item-images/bloodstone-tear.png">
+                        <img class="item-icon" src="images/item-images/tearstone-blood.png">
                         <p class="text-el"><a class="text-el" href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shinjuku" target="_blank">Shinjuku</a></p>
                         <p class="text-el"><a class="text-el" href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Shinjuku#Shinjuku_2-chome" target="_blank">Shinjuku 2-chrome</a></p>
                         <p class="text-el">AP: 21</p>
@@ -569,7 +569,7 @@
                         <h1 class="text-el">Scale of Fantasy</h1>
                     </div>
                     <div class="location-box">
-                        <img class="item-icon" src="images/item-images/scale-fantasy.png">
+                        <img class="item-icon" src="images/item-images/scales-fantasy.png">
                         <p class="text-el"><a class="text-el" href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Avalon_le_Fae" target="_blank">Avalon le Fae</a></p>
                         <p class="text-el"><a class="text-el" href="https://fategrandorder.fandom.com/wiki/Free_Quests:_Avalon_le_Fae#Londinium" target="_blank">Londinium</a></p>
                         <p class="text-el">AP: 21</p>
@@ -595,7 +595,7 @@
                 <p class="text-el">&copy; 2022 Zelp.</p>
             </div>
         </footer>
-        <script src="\scripts\index.js"></script>
+        <script src="scripts/index.js"></script>
     </body>
 
 </html>
