Corrected script src
Title says it all

--- a/items.html
+++ b/items.html
@@ -206,7 +206,7 @@
             <div id="footer-content">
                 <p class="text-el">&copy; 2022 Zelp.</p>
             </div>
-            <script src="/scripts/items.js"></script>
+            <script src="scripts/items.js"></script>
         </footer>
 
     </body>
